--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #cccccc;
+    color: #c3d8c9;
 }
 
 /* Contenido principal */
@@ -86,6 +86,46 @@ footer {
     margin-top: 20px;
 }
 
+.whatsapp-float {
+    position: fixed;
+    width: 30px;
+    height: 40px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #f9f9f9;
+    z-index: 100;
+    animation: pulse 2s infinite;
+
+}
+
+.whatsapp-float:hover {
+    background-color: #128C7E;
+    animation: none;
+}
+
+.whatsapp-float img {
+    width: 35px;
+    height: 35px;
+    margin-top: 12px;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
     nav ul {
@@ -95,5 +135,18 @@ footer {
     
     .servicios {
         flex-direction: column;
+    }
+
+    .whatsapp-float {
+        width: 50px;
+        height: 50px;
+        bottom: 20px;
+        right: 20px;
+    }
+    
+    .whatsapp-float img {
+        width: 30px;
+        height: 30px;
+        margin-top: 10px;
     }
 }
